dev/kubernetes-grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      name: grafana
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
        - name: grafana
          containerPort: 3000
        resources:
          limits:
            memory: "1Gi"
            cpu: "1000m"
          requests: 
            memory: 500M
            cpu: "500m"
        volumeMounts:
          - mountPath: /var/lib/grafana
            name: grafana-storage
          - mountPath: /etc/grafana/provisioning/datasources
            name: grafana-datasources
            readOnly: false
          - mountPath: /etc/grafana/provisioning/dashboards
            name: grafana-dashboards
            readOnly: false
          - mountPath: /var/lib/grafana/dashboards
            name: grafana-dashboard-general
            readOnly: false
          - mountPath: /var/lib/grafana/dashboards/db
            name: grafana-dashboards-db
          - mountPath: /var/lib/grafana/dashboards/k8
            name: grafana-dashboards-k8
      securityContext:
        runAsUser: 0
      volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-vol
#          emptyDir: {}
        - name: grafana-datasources
          configMap:
              defaultMode: 420
              name: grafana-datasources
        - name: grafana-dashboards
          configMap:
            defaultMode: 420
            name: grafana-dashboards
        - name: grafana-dashboard-general
          configMap:
            defaultMode: 420
            name: grafana-dashboard-general
        - name: grafana-dashboards-db
          configMap:
            defaultMode: 420
            name: grafana-dashboards-db
        - name: grafana-dashboards-k8
          configMap:
            defaultMode: 420
            name: grafana-dashboards-k8
